# k2

./: .gitignore  CMakeLists.txt  fixk2.txt
cmake/: torch.cmake
k2/csrc/: CMakeLists.txt  connect_test.cu  default_context.cu  fsa_algo.h  intersect_dense_pruned.cu  intersect_test.cu  log.h  online_intersect_dense_pruned.cu  online_intersect_dense_pruned.h  ragged_ops.cu  ragged_ops.h  ragged_ops_inl.h  ragged_test.cu  tensor.cu  tensor.h
k2/device/android/ASR/: .gitignore
k2/device/android/ASR/app/: .gitignore  build.gradle
k2/device/android/ASR/app/src/main/: AndroidManifest.xml
k2/device/android/ASR/app/src/main/cpp/: CMakeLists.txt  cmake
k2/device/android/ASR/app/src/main/cpp/jni/: k2.cc
k2/device/android/ASR/app/src/main/cpp/k2/: CMakeLists.txt  csrc  torch
k2/device/android/ASR/app/src/main/java/com/xiaomi/k2/: MainActivity.java  Recognize.java  Recognizer.java  VoiceRectView.java  WaveView.java
k2/device/android/ASR/app/src/main/res/layout/: activity_main.xml
k2/python/csrc/torch/: fsa_algo.cu
k2/python/k2/: autograd.py
k2/python/tests/: replace_fsa_test.py
k2/torch/csrc/: deserialization_test.cu  fsa_algo.cu  fsa_class_test.cu  torch_api.cu  torch_api.h
